--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,15 @@
-<h1 class="animated fadeIn fast">Sobre comic App</h1>
+<h1 class="animated fadeIn fast">About Heroapp</h1>
 <hr>
 <p class="fadeIn">
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti fugiat quo, sit laboriosam iste maiores veniam dolore magnam quis, harum illum quos temporibus reprehenderit sed reiciendis possimus enim aliquam. Maiores.
+    this is my first application using Angular, it details the basics of angular such as:
 </p>
+
+<ul>
+    <li>Injection of dependencies.</li>
+    <li>Services</li>
+    <li>Router</li>
+    <li>Communication between parent and child components</li>
+    <li>Angular Pipes</li>
+    <li>Structuring the project</li>
+    <li>Using angular cli to generate.li>
+</ul>
