--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid animated fadeIn fast">
     <div class="container">
-      <h1 class="display-4">Comic App</h1>
-      <p class="lead">Esta es una aplicacion de comics.</p>
+      <h1 class="display-4">Heroapp</h1>
+      <p class="lead">This is an App of Heroes.</p>
     </div>
   </div>
